# Assignment-1-XG

./: README.md  main.py  pyproject.toml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
